fix: mobile text rendering on iOS for about page

--- a/app/globals.css
+++ b/app/globals.css
@@ -115,8 +115,6 @@
 
   main {
     hanging-punctuation: first allow-end last;
-    hyphens: auto;
-    hyphenate-limit-chars: 10 6 6;
   }
 
   del { text-decoration-thickness: 1px; }
